deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-app
spec:
  selector:
    app.kubernetes.io/name: blog-app
  ports:
    - name: http
      port: 80
      targetPort: http
